...
                let presetsItem = SidebarItem.managePresets
                sidebarRow(item: presetsItem) {
                    Label("Manage Presets", systemImage: Icons.sfListBulletRectangle)
                }
                let categoriesItem = SidebarItem.manageCategories
                sidebarRow(item: categoriesItem) {
                    Label("Manage Categories", systemImage: Icons.sfTag)
                }
            }
        }
        .ub_listStyleLiquidAware()
        .toolbar {
            ToolbarItem(placement: .principal) {
...
    var title: String {
        switch self {
        case .home: return "Home"
        case .budgets: return "Budgets"
        case .income: return "Income"
        case .cards: return "Cards"
        case .settings: return "Settings"
        }
    }
    
    var systemImage: String {
        switch self {
        case .home: return Icons.sfHouse
...
